syntax = "proto3";
package fx.staking.v1beta1;

import "cosmos/staking/v1beta1/genesis.proto";
import "cosmos/staking/v1beta1/staking.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/functionx/fx-core/x/staking/types";

// GenesisState defines the staking module's genesis state.
message GenesisState {
  // params defines all the paramaters of related to deposit.
  cosmos.staking.v1beta1.Params params = 1 [(gogoproto.nullable) = false];

  // last_total_power tracks the total amounts of bonded tokens recorded during
  // the previous end block.
  bytes last_total_power = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];

  // last_validator_powers is a special index that provides a historical list
  // of the last-block's bonded validators.
  repeated cosmos.staking.v1beta1.LastValidatorPower last_validator_powers = 3 [(gogoproto.nullable) = false];

  // delegations defines the validator set at genesis.
  repeated cosmos.staking.v1beta1.Validator validators = 4 [(gogoproto.nullable) = false];

  // delegations defines the delegations active at genesis.
  repeated cosmos.staking.v1beta1.Delegation delegations = 5 [(gogoproto.nullable) = false];

  // unbonding_delegations defines the unbonding delegations active at genesis.
  repeated cosmos.staking.v1beta1.UnbondingDelegation unbonding_delegations = 6 [(gogoproto.nullable) = false];

  // redelegations defines the redelegations active at genesis.
  repeated cosmos.staking.v1beta1.Redelegation redelegations = 7 [(gogoproto.nullable) = false];

  bool exported = 8;

  // allowances defines the shares allowances active at genesis.
  repeated Allowance allowances = 9 [(gogoproto.nullable) = false];
}

// Allowance defines the allowance of shares for a delegator.
message Allowance {
  option (gogoproto.equal) = false;
  // validator_address defines the validator address.
  string validator_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // owner_address defines the owner address.
  string owner_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // spender_address defines the spender address.
  string spender_address = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // allowance defines the amount of shares.
  string allowance = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}
